tests/dataset/tpc-ds/compiler/cpp/q36.error
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:77:12: error: ‘i’ was not declared in this scope
   77 |   decltype(i.i_category) category;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:77:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:78:12: error: ‘i’ was not declared in this scope
   78 |   decltype(i.i_class) class;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:78:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:78:28: error: expected identifier before ‘;’ token
   78 |   decltype(i.i_class) class;
      |                            ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:78:3: error: multiple types in one declaration
   78 |   decltype(i.i_class) class;
      |   ^~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:81:12: error: ‘ss’ was not declared in this scope
   81 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:81:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:82:12: error: ‘d’ was not declared in this scope
   82 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:82:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:83:12: error: ‘i’ was not declared in this scope
   83 |   decltype(i) i;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:83:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:84:12: error: ‘s’ was not declared in this scope
   84 |   decltype(s) s;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:84:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:92:42: error: expected unqualified-id before ‘class’
   92 |   decltype(std::declval<__struct7>().key.class) i_class;
      |                                          ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:96:42: error: ‘struct Result’ has no member named ‘catestd’
   96 |   decltype(std::declval<__struct7>().key.catestd::declval<__struct7>() ory) f0;
      |                                          ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:96:42: error: ‘Result::catestd’ has not been declared
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:96:68: error: expected primary-expression before ‘>’ token
   96 |   decltype(std::declval<__struct7>().key.catestd::declval<__struct7>() ory) f0;
      |                                                                    ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:96:70: error: expected primary-expression before ‘)’ token
   96 |   decltype(std::declval<__struct7>().key.catestd::declval<__struct7>() ory) f0;
      |                                                                      ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:97:42: error: expected unqualified-id before ‘class’
   97 |   decltype(std::declval<__struct7>().key.class) f1;
      |                                          ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp: In function ‘void __json(const Result&)’:
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:126:12: error: expected unqualified-id before ‘class’
  126 |   __json(v.class);
      |            ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:280:56: error: too many initializers for ‘Result’
  280 |             auto __key = Result{i.i_category, i.i_class};
      |                                                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:284:47: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  284 |                 __g.items.push_back(__struct6{ss, d, i, s});
      |                                               ^~
      |                                               |
      |                                               StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:291:59: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  291 |                   __key, std::vector<__struct6>{__struct6{ss, d, i, s}}});
      |                                                           ^~
      |                                                           |
      |                                                           StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:291:71: error: no matching function for call to ‘std::vector<__struct6>::vector(<brace-enclosed initializer list>)’
  291 |                   __key, std::vector<__struct6>{__struct6{ss, d, i, s}}});
      |                                                                       ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; value_type = std::vector<__struct6>::value_type; allocator_type = std::allocator<__struct6>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; allocator_type = std::allocator<__struct6>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:300:21: error: expected primary-expression before ‘{’ token
  300 |           {__struct9{g.key.category, g.key.class},
      |                     ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:300:21: error: expected ‘}’ before ‘{’ token
  300 |           {__struct9{g.key.category, g.key.class},
      |           ~         ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:300:21: error: expected ‘)’ before ‘{’ token
  300 |           {__struct9{g.key.category, g.key.class},
      |                     ^
      |                     )
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:299:24: note: to match this ‘(’
  299 |       __items.push_back(
      |                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:301:21: error: expected primary-expression before ‘{’ token
  301 |            __struct8{
      |                     ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:323:25: error: expected primary-expression before ‘)’ token
  323 |                 })()))}});
      |                         ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:324:6: error: expected ‘)’ before ‘std’
  324 |     }
      |      ^
      |      )
  325 |     std::sort(__items.begin(), __items.end(), [](auto &a, auto &b) {
      |     ~~~
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:265:35: note: to match this ‘(’
  265 |   std::vector<__struct6> result = ([&]() {
      |                                   ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:265:36: error: conversion from ‘main()::<lambda()>’ to non-scalar type ‘std::vector<__struct6>’ requested
  265 |   std::vector<__struct6> result = ([&]() {
      |                                   ~^~~~~~~
  266 |     std::vector<__struct7> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  267 |     for (auto ss : store_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   
  268 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~     
  269 |         if (!((ss.ss_sold_date_sk == d.d_date_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  270 |           continue;
      |           ~~~~~~~~~                 
  271 |         for (auto i : item) {
      |         ~~~~~~~~~~~~~~~~~~~~~       
  272 |           if (!((ss.ss_item_sk == i.i_item_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  273 |             continue;
      |             ~~~~~~~~~               
  274 |           for (auto s : store) {
      |           ~~~~~~~~~~~~~~~~~~~~~~    
  275 |             if (!((ss.ss_store_sk == s.s_store_sk)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  276 |               continue;
      |               ~~~~~~~~~             
  277 |             if (!(((d.d_year == 2000) && (((s.s_state == std::string("A")) ||
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  278 |                                            (s.s_state == std::string("B")))))))
      |                                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  279 |               continue;
      |               ~~~~~~~~~             
  280 |             auto __key = Result{i.i_category, i.i_class};
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  281 |             bool __found = false;
      |             ~~~~~~~~~~~~~~~~~~~~~   
  282 |             for (auto &__g : __groups) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  283 |               if (__g.key == __key) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  284 |                 __g.items.push_back(__struct6{ss, d, i, s});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  285 |                 __found = true;
      |                 ~~~~~~~~~~~~~~~     
  286 |                 break;
      |                 ~~~~~~              
  287 |               }
      |               ~                     
  288 |             }
      |             ~                       
  289 |             if (!__found) {
      |             ~~~~~~~~~~~~~~~         
  290 |               __groups.push_back(__struct7{
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  291 |                   __key, std::vector<__struct6>{__struct6{ss, d, i, s}}});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  292 |             }
      |             ~                       
  293 |           }
      |           ~                         
  294 |         }
      |         ~                           
  295 |       }
      |       ~                             
  296 |     }
      |     ~                               
  297 |     std::vector<std::pair<__struct9, __struct8>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  298 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~      
  299 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~            
  300 |           {__struct9{g.key.category, g.key.class},
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  301 |            __struct8{
      |            ~~~~~~~~~~               
  302 |                g.key.category, g.key.class,
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  303 |                (([&](auto v) {
      |                ~~~~~~~~~~~~~~~      
  304 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  305 |                 })(([&]() {
      |                 ~~~~~~~~~~~         
  306 |                   std::vector<decltype(std::declval<__struct6>().ss_net_profit)>
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  307 |                       __items;
      |                       ~~~~~~~~      
  308 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  309 |                     __items.push_back(x.ss_net_profit);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  310 |                   }
      |                   ~                 
  311 |                   return __items;
      |                   ~~~~~~~~~~~~~~~   
  312 |                 })()) /
      |                 ~~~~~~~             
  313 |                 ([&](auto v) {
      |                 ~~~~~~~~~~~~~~      
  314 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  315 |                 })(([&]() {
      |                 ~~~~~~~~~~~         
  316 |                   std::vector<
      |                   ~~~~~~~~~~~~      
  317 |                       decltype(std::declval<__struct6>().ss_ext_sales_price)>
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  318 |                       __items;
      |                       ~~~~~~~~      
  319 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  320 |                     __items.push_back(x.ss_ext_sales_price);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  321 |                   }
      |                   ~                 
  322 |                   return __items;
      |                   ~~~~~~~~~~~~~~~   
  323 |                 })()))}});
      |                 ~~~~~~~~~~          
  324 |     }
      |     ~                               
  325 |     std::sort(__items.begin(), __items.end(), [](auto &a, auto &b) {
      |     ~~~                             
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:328:6: error: expected ‘,’ or ‘;’ before ‘)’ token
  328 |     });
      |      ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:330:20: error: ‘__items’ was not declared in this scope; did you mean ‘__res’?
  330 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    __res
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:332:12: error: cannot convert ‘std::vector<__struct8>’ to ‘int’ in return
  332 |     return __res;
      |            ^~~~~
      |            |
      |            std::vector<__struct8>
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp: At global scope:
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:333:4: error: expected unqualified-id before ‘)’ token
  333 |   })();
      |    ^
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:334:10: error: expected ‘)’ before ‘(’ token
  334 |   (__json(result));
      |   ~      ^
      |          )
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:336:3: error: expected unqualified-id before ‘return’
  336 |   return 0;
      |   ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq362833932405/001/prog.cpp:337:1: error: expected declaration before ‘}’ token
  337 | }
      | ^
